--- a/20251228/index.html
+++ b/20251228/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -562,7 +562,9 @@
             <img src="https://www.genspark.ai/api/files/s/S6VtWMrd" alt="Google Antigravity vs Gemini CLI インフォグラフィック" class="infographic-image">
             <p style="text-align: center; color: var(--text-secondary); margin-top: 15px;">
                 ※ 上図は開発フェーズ別のツール使い分け戦略を視覚化したものです
+            <img src="./info.jpg" alt="追加情報" class="infographic-image" style="margin-top: 30px; max-width: 800px;">
             </p>
+
         </section>
 
         <!-- ツール比較 -->
